[v1.0.0] 2020-05-25 Project Architecture 구성
아래 두개 포스트와 관련된 Commit 입니다.
https://thinkground.studio/spring-boot-%ed%94%84%eb%a1%9c%ec%a0%9d%ed%8a%b8-%ea%b8%b0%eb%b3%b8-%ec%95%84%ed%82%a4%ed%85%8d%ec%b2%98-%ea%b5%ac%ec%84%b1%ed%95%98%ea%b8%b0-1/
https://thinkground.studio/spring-boot-%ed%94%84%eb%a1%9c%ec%a0%9d%ed%8a%b8-%ea%b8%b0%eb%b3%b8-%ec%95%84%ed%82%a4%ed%85%8d%ec%b2%98-%ea%b5%ac%ec%84%b1%ed%95%98%ea%b8%b0-2/

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>studio.thinkground</groupId>
     <artifactId>study</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>thinkground_study</name>
+    <name>thinkGround_study</name>
     <description>ThinkGround Study Material</description>
 
     <properties>
